--- a/homepage_using_buttons.html
+++ b/homepage_using_buttons.html
@@ -15,10 +15,11 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="styles/reset.css" />
-        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
-        <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" href="styles/for_buttons.css">
+        <link rel="stylesheet" href="styles/reset.css" /> <!-- Reset CSS for consistent styling across browsers -->
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" /> <!-- Custom styles for header and footer -->
+        <link rel="stylesheet" href="styles/style.css" /> <!-- Main stylesheet for the webpage -->
+        <link rel="stylesheet" href="styles/for_buttons.css"> <!-- Additional styles for buttons -->
+
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -28,30 +29,34 @@
         <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
         <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="./scripts/firebaseAPI_DTC13.js"></script>
-        <script src="./scripts/authentication.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script> <!-- Script for initializing Firebase API -->
+        <script src="./scripts/authentication.js"></script> <!-- Script for handling user authentication -->
     </head>
 
     <body>
-        <!-- Navbar placeholder -->
+        <!-- Header section with a navigation bar placeholder -->
         <header id="navbar-container">
             <nav id="navbar-placeholder"></nav>
         </header>
         <!-- Navbar placeholder -->
 
+        <!-- Main content area with buttons for various features of the app -->
         <div id="main-container">
             <div id="buttons">
+                <!-- Buttons linking to different pages of the app -->
                 <a href="material_categories.html"><button>Search</button></a>
                 <a href="depot_location.html"><button>Depot Locations</button></a>
                 <a href=""><button>Other Resources</button></a>
             </div>
         </div>
 
-        <!-- Footer placeholder -->
+        <!-- Footer section with a placeholder for additional navigation or information -->
         <footer id="footer-container">
             <nav id="footer-placeholder"></nav>
         </footer>
         <!-- Footer placeholder -->
+        
+        <!-- Additional JavaScript file for general page functionality -->
         <script src="./scripts/skeleton.js"></script>
     </body>
 </html>
