--- a/login.html
+++ b/login.html
@@ -15,9 +15,10 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="styles/reset.css" />
-        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
-        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/reset.css" /> <!-- Reset CSS for consistent styling across browsers -->
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" /> <!-- Custom styles for header and footer -->
+        <link rel="stylesheet" href="styles/style.css" /> <!-- Main stylesheet for the webpage -->
+
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -27,27 +28,29 @@
         <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
         <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="./scripts/firebaseAPI_DTC13.js"></script>
-        <script src="./scripts/authentication.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script> <!-- Script for initializing Firebase API -->
+        <script src="./scripts/authentication.js"></script> <!-- Script for handling user authentication -->
     </head>
 
     <body>
-        <!-- Navbar placeholder -->
+        <!-- Header section with a placeholder for navigation bar -->
         <header id="navbar-container">
             <nav id="navbar-placeholder"></nav>
         </header>
         <!-- Navbar placeholder -->
 
+        <!-- Main content area, primarily for user authentication -->
         <main>
             <div id="main_user_interaction">
                 <div class="main_logo">
                     <h4 class="main_teetotee">Trash to Treasure</h4>
                 </div>
+                <!-- Container for Firebase UI authentication elements -->
                 <div id="firebaseui-auth-container"></div>
             </div>
         </main>
 
-        <!-- Footer placeholder -->
+        <!-- Footer section with a placeholder for additional content or links -->
         <footer id="footer-container">
             <nav id="footer-placeholder"></nav>
         </footer>
