--- a/material_categories.html
+++ b/material_categories.html
@@ -15,10 +15,10 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="styles/reset.css" />
-        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
-        <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" href="styles/for_buttons.css">
+        <link rel="stylesheet" href="styles/reset.css" /> <!-- Reset CSS for consistent styling across browsers -->
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" /> <!-- Custom styles for header and footer -->
+        <link rel="stylesheet" href="styles/style.css" /> <!-- Main stylesheet for the webpage -->
+        <link rel="stylesheet" href="styles/for_buttons.css"> <!-- Additional styles for buttons -->
 
 
         <!-- Firebase related CSS, JS, and JQuery -->
@@ -29,19 +29,21 @@
         <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
         <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="./scripts/firebaseAPI_DTC13.js"></script>
-        <script src="./scripts/authentication.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script> <!-- Script for initializing Firebase API -->
+        <script src="./scripts/authentication.js"></script> <!-- Script for user authentication -->
     </head>
 
     <body>
-        <!-- Navbar placeholder -->
+        <!-- Header section with a placeholder for the navigation bar -->
         <header id="navbar-container">
             <nav id="navbar-placeholder"></nav>
         </header>
         <!-- Navbar placeholder -->
 
+        <!-- Main content area with buttons for different recycling categories -->
         <div id="main-container">
             <div id="buttons">
+                <!-- Buttons for each category like Garbage, Glass, Hazardous, etc. -->
                 <button class="category_1">Garbage</button>
                 <button class="category_2">Glass</button>
                 <button class="category_3">Hazardous</button>
@@ -51,12 +53,14 @@
             </div>
         </div>
 
-        <!-- Footer placeholder -->
+        <!-- Footer section with a placeholder for additional content or links -->
         <footer id="footer-container">
             <nav id="footer-placeholder"></nav>
         </footer>
         <!-- Footer placeholder -->
-        <script src="./scripts/skeleton.js"></script>
-        <script src="scripts/material_categories.js"></script>
+
+        <!-- Additional JavaScript files for functionality -->
+        <script src="./scripts/skeleton.js"></script> <!-- Script for basic page functionality -->
+        <script src="scripts/material_categories.js"></script> <!-- Script for handling material category interactions -->
     </body>
 </html>
