--- a/material_subcategories.html
+++ b/material_subcategories.html
@@ -15,10 +15,10 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="styles/reset.css" />
-        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
-        <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" href="styles/for_buttons.css">
+        <link rel="stylesheet" href="styles/reset.css" /> <!-- Reset CSS for consistent styling across browsers -->
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" /> <!-- Custom styles for header and footer -->
+        <link rel="stylesheet" href="styles/style.css" /> <!-- Main stylesheet for the webpage -->
+        <link rel="stylesheet" href="styles/for_buttons.css"> <!-- Additional styles for buttons -->
 
 
         <!-- Firebase related CSS, JS, and JQuery -->
@@ -29,19 +29,21 @@
         <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
         <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="./scripts/firebaseAPI_DTC13.js"></script>
-        <script src="./scripts/authentication.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script> <!-- Script for initializing Firebase API -->
+        <script src="./scripts/authentication.js"></script> <!-- Script for handling user authentication -->
     </head>
 
     <body>
-        <!-- Navbar placeholder -->
+        <!-- Header section with a placeholder for navigation bar -->
         <header id="navbar-container">
             <nav id="navbar-placeholder"></nav>
         </header>
         <!-- Navbar placeholder -->
 
+        <!-- Main content area containing buttons for different subcategories -->
         <div id="main-container">
             <div id="buttons">
+                <!-- Series of buttons, each representing a different subcategory -->
                 <button id="individual_buttons" class="button0"></button>
                 <button id="individual_buttons" class="button1"></button>
                 <button id="individual_buttons" class="button2"></button>
@@ -53,13 +55,15 @@
             </div>
         </div>
 
-        <!-- Footer placeholder -->
+        <!-- Footer section with a placeholder for additional content or links -->
         <footer id="footer-container">
             <nav id="footer-placeholder"></nav>
         </footer>
         <!-- Footer placeholder -->
-        <script src="./scripts/skeleton.js"></script>
-        <script id="dynamically_load_a_script" src="scripts/load_subcategories.js"></script>
-        <script src="scripts/material_subcategories.js"></script>
+
+        <!-- Scripts for loading and managing subcategories -->
+        <script src="./scripts/skeleton.js"></script> <!-- Script for basic page functionality -->
+        <script id="dynamically_load_a_script" src="scripts/load_subcategories.js"></script> <!-- Script to dynamically load subcategories -->
+        <script src="scripts/material_subcategories.js"></script> <!-- Script for handling material subcategory data -->
     </body>
 </html>
