--- a/depot_locations.html
+++ b/depot_locations.html
@@ -1,66 +1,114 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="index, follow" />
+        <title>Trash to treasure</title>
 
-    <title>Trash to treasure</title>
+        <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+        <meta name="Author" content="Team DTC-13" />
 
-    <meta name="Description" content="DTC team 13 mobile-first recycling app" />
-    <meta name="Author" content="Team DTC-13" />
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer.css" />
+        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/depot_locations.css" />
 
-    <!-- CSS -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/header_and_footer.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/depot_locations.css">
+        <!-- Firebase related CSS, JS, and JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+    </head>
 
-    <!-- Firebase related CSS, JS, and JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="./scripts/firebaseAPI_DTC13.js"></script>
-</head>
+    <body>
+        <!-- Navbar placeholder -->
+        <header id="navbar_container">
+            <nav id="navbar_placeholder"></nav>
+        </header>
+        <!-- Navbar placeholder -->
 
-<body>
-    <!-- Navbar placeholder -->
-    <header id="navbar_container">
-        <nav id="navbar_placeholder"></nav>
-    </header>
-    <!-- Navbar placeholder -->
-
-    <div id="main_container">
-        <div id="depot_buttons">
-            <a href="depot_display.html"><button class="depot_location_button">Capital Salvage</button></a>
-            <a href="depot_display.html"><button class="depot_location_button">Go Green Bottle Depot and Recycling</button></a>
-            <a href="depot_display.html"><button class="depot_location_button">North Shore Recycling and Waste Centre</button></a>
-            <a href="depot_display.html"><button class="depot_location_button">North Start Metal Recycling</button></a>
-            <a href="depot_display.html"><button class="depot_location_button">Regional Recycling Vancouver Bottle Depot</button></a>
-            <a href="depot_display.html"><button class="depot_location_button">UNA Green Depot</button></a>
-            <a href="depot_display.html"><button class="depot_location_button">United We Can</button></a>
-            <a href="depot_display.html"><button class="depot_location_button">Vancouver Central Return It Express Depot</button></a>
-            <a href="depot_display.html"><button class="depot_location_button">Vancouver Zero Waste Centre</button></a>
-            <a href="depot_display.html"><button class="depot_location_button">Yaletown Return it Express Depot</button></a>
+        <div id="main_container">
+            <div id="greeting_text">
+                <h1 id="page_title">Depot Locations</h1>
+            </div>
+            <div id="depot_buttons">
+                <div class="depot_location_button" onclick="location.href='depot_display.html'">
+                    <p>Capital Salvage</p>
+                </div>
+            </div>
+            <div id="depot_buttons">
+                <div class="depot_location_button" onclick="location.href='depot_display.html'">
+                    <p>Go Green Bottle Depot<br> and Recycling</p>
+                </div>
+            </div>
+            <div id="depot_buttons">
+                <div class="depot_location_button" onclick="location.href='depot_display.html'">
+                    <p>North Shore Recycling <br>and Waste Centre</p>
+                </div>
+            </div>
+            <div id="depot_buttons">
+                <div class="depot_location_button" onclick="location.href='depot_display.html'">
+                    <p>North Start Metal Recycling</p>
+                </div>
+            </div>
+            <div id="depot_buttons">
+                <div class="depot_location_button" onclick="location.href='depot_display.html'">
+                    <p>Regional Recycling Vancouver Bottle Depot</p>
+                </div>
+            </div>
+            <div id="depot_buttons">
+                <div class="depot_location_button" onclick="location.href='depot_display.html'">
+                    <p>UNA Green Depot</p>
+                </div>
+            </div>
+            <div id="depot_buttons">
+                <div class="depot_location_button" onclick="location.href='depot_display.html'">
+                    <p>United We Can</p>
+                </div>
+            </div>
+            <div id="depot_buttons">
+                <div class="depot_location_button" onclick="location.href='depot_display.html'">
+                    <p>Vancouver Central Return It Express Depot</p>
+                </div>
+            </div>
+            <div id="depot_buttons">
+                <div class="depot_location_button" onclick="location.href='depot_display.html'">
+                    <p>Vancouver Zero Waste Centre</p>
+                </div>
+            </div>
+            <div id="depot_buttons">
+                <div class="depot_location_button" onclick="location.href='depot_display.html'">
+                    <p>Yaletown Return it <br>Express Depot</p>
+                </div>
+            </div>
+                <!-- <a href="depot_display.html"><button class="depot_location_button">Capital Salvage</button></a> -->
+                <!-- <a href="depot_display.html"><button class="depot_location_button">Go Green Bottle Depot and Recycling</button></a> -->
+                <!-- <a href="depot_display.html"><button class="depot_location_button">North Shore Recycling and Waste Centre</button></a> -->
+                <!-- <a href="depot_display.html"><button class="depot_location_button">North Start Metal Recycling</button></a> -->
+                <!-- <a href="depot_display.html"><button class="depot_location_button">Regional Recycling Vancouver Bottle Depot</button></a> -->
+                <!-- <a href="depot_display.html"><button class="depot_location_button">UNA Green Depot</button></a> -->
+                <!-- <a href="depot_display.html"><button class="depot_location_button">United We Can</button></a> -->
+                <!-- <a href="depot_display.html"><button class="depot_location_button">Vancouver Central Return It Express Depot</button></a> -->
+                <!-- <a href="depot_display.html"><button class="depot_location_button">Vancouver Zero Waste Centre</button></a> -->
+                <!-- <a href="depot_display.html"><button class="depot_location_button">Yaletown Return it Express Depot</button></a> -->
+            </div>
         </div>
-    </div>
 
-    <!-- Footer placeholder -->
-    <footer id="footer_container">
-        <nav id="footer_placeholder"></nav>
-    </footer>
-    <!-- Footer placeholder -->
-    <script src="./scripts/skeleton.js"></script>
-    <script src="scripts/depot_locations.js"></script>
-</body>
-
+        <!-- Footer placeholder -->
+        <footer id="footer_container">
+            <nav id="footer_placeholder"></nav>
+        </footer>
+        <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
+        <script src="scripts/depot_locations.js"></script>
+    </body>
 </html>
