--- a/material_categories.html
+++ b/material_categories.html
@@ -21,6 +21,7 @@
         <!-- Custom styles for header and footer -->
         <link rel="stylesheet" href="styles/style.css" />
         <!-- Main stylesheet for the webpage -->
+        <link rel="stylesheet" href="styles/material_categories.css" />
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -28,7 +29,8 @@
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="./scripts/firebaseAPI_DTC13.js"></script><!-- Script for initializing Firebase API -->
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+        <!-- Script for initializing Firebase API -->
     </head>
 
     <body>
@@ -40,6 +42,9 @@
 
         <!-- Main content area with buttons for different recycling categories -->
         <div id="main_container">
+            <div id="greeting_text">
+                <h1 id="page_title">Categories</h1>
+            </div>
             <div id="buttons">
                 <!-- Buttons for each category like Garbage, Glass, Hazardous, etc. -->
                 <button class="category_1 main_button"></button>
