--- a/material_subcategories.html
+++ b/material_subcategories.html
@@ -15,10 +15,13 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="styles/reset.css" /> <!-- Reset CSS for consistent styling across browsers -->
-        <link rel="stylesheet" href="styles/header_and_footer.css" /> <!-- Custom styles for header and footer -->
-        <link rel="stylesheet" href="styles/style.css" /> <!-- Main stylesheet for the webpage -->
-
+        <link rel="stylesheet" href="styles/reset.css" />
+        <!-- Reset CSS for consistent styling across browsers -->
+        <link rel="stylesheet" href="styles/header_and_footer.css" />
+        <!-- Custom styles for header and footer -->
+        <link rel="stylesheet" href="styles/style.css" />
+        <!-- Main stylesheet for the webpage -->
+        <link rel="stylesheet" href="styles/material_subcategories.css" />
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -26,7 +29,8 @@
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="./scripts/firebaseAPI_DTC13.js"></script> <!-- Script for initializing Firebase API -->
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+        <!-- Script for initializing Firebase API -->
     </head>
 
     <body>
@@ -38,6 +42,9 @@
 
         <!-- Main content area containing buttons for different subcategories -->
         <div id="main_container">
+            <div id="greeting_text">
+                <h1 id="page_title">Subcategories</h1>
+            </div>
             <div id="buttons">
                 <!-- Series of buttons, each representing a different subcategory -->
                 <button id="individual_buttons" class="button0 main_button"></button>
@@ -47,7 +54,6 @@
                 <button id="individual_buttons" class="button4 main_button"></button>
                 <button id="individual_buttons" class="button5 main_button"></button>
                 <button id="individual_buttons" class="button6 main_button"></button>
-                <button id="individual_buttons" class="button7 main_button"></button>
             </div>
         </div>
 
@@ -58,8 +64,11 @@
         <!-- Footer placeholder -->
 
         <!-- Scripts for loading and managing subcategories -->
-        <script src="./scripts/skeleton.js"></script> <!-- Script for basic page functionality -->
-        <script id="dynamically_load_a_script" src="scripts/load_subcategories.js"></script> <!-- Script to dynamically load subcategories -->
-        <script src="scripts/material_subcategories.js"></script> <!-- Script for handling material subcategory data -->
+        <script src="./scripts/skeleton.js"></script>
+        <!-- Script for basic page functionality -->
+        <script id="dynamically_load_a_script" src="scripts/load_subcategories.js"></script>
+        <!-- Script to dynamically load subcategories -->
+        <script src="scripts/material_subcategories.js"></script>
+        <!-- Script for handling material subcategory data -->
     </body>
 </html>
